Fix the missing backgrounds + Increased the shadow weight of the content on Auth, Coming Soon and Maintenance pages

--- a/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
+++ b/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
@@ -39,7 +39,7 @@
             min-width: 400px;
             max-width: 400px;
             background: #FFFFFF;
-            @include mat-elevation(7);
+            @include mat-elevation(16);
 
             @include media-breakpoint('sm') {
                 width: 360px;
