--- a/src/app/main/content/pages/authentication/forgot-password/forgot-password.component.scss
+++ b/src/app/main/content/pages/authentication/forgot-password/forgot-password.component.scss
@@ -22,7 +22,7 @@
                 padding: 32px;
                 text-align: center;
                 background: #FFFFFF;
-                @include mat-elevation(7);
+                @include mat-elevation(16);
 
                 @include media-breakpoint('xs') {
                     padding: 24px;
