--- a/src/app/main/content/pages/authentication/lock/lock.component.scss
+++ b/src/app/main/content/pages/authentication/lock/lock.component.scss
@@ -23,7 +23,7 @@
                 max-width: 420px;
                 padding: 48px 32px 32px 32px;
                 background: #FFFFFF;
-                @include mat-elevation(7);
+                @include mat-elevation(16);
 
                 @include media-breakpoint('xs') {
                     padding: 24px;
