--- a/src/app/main/content/pages/authentication/mail-confirm/mail-confirm.component.scss
+++ b/src/app/main/content/pages/authentication/mail-confirm/mail-confirm.component.scss
@@ -21,7 +21,7 @@
                 padding: 48px;
                 background: #FFFFFF;
                 text-align: center;
-                @include mat-elevation(7);
+                @include mat-elevation(16);
 
                 @include media-breakpoint('xs') {
                     padding: 24px;
