--- a/src/app/main/content/pages/maintenance/maintenance.component.scss
+++ b/src/app/main/content/pages/maintenance/maintenance.component.scss
@@ -5,7 +5,7 @@
     #maintenance {
         width: 100%;
         overflow: auto;
-        background: url('/assets/images/backgrounds/march.jpg') no-repeat;
+        background: url('/assets/images/backgrounds/dark-material-bg.jpg') no-repeat;
         background-size: cover;
 
         #maintenance-form-wrapper {
@@ -21,7 +21,7 @@
                 padding: 48px;
                 background: #FFFFFF;
                 text-align: center;
-                @include mat-elevation(7);
+                @include mat-elevation(16);
 
                 @include media-breakpoint('xs') {
                     padding: 24px;
