--- a/src/app/main/content/pages/profile/profile.component.scss
+++ b/src/app/main/content/pages/profile/profile.component.scss
@@ -6,7 +6,7 @@
         height: 320px;
         min-height: 320px;
         max-height: 320px;
-        background: url('/assets/images/backgrounds/march.jpg') no-repeat 0 45%;
+        background: url('/assets/images/backgrounds/dark-material-bg.jpg') no-repeat 0 45%;
         background-size: 100% auto;
 
         .profile-image {
